--- a/src/components/HeaderNav.module.css
+++ b/src/components/HeaderNav.module.css
@@ -65,6 +65,16 @@
 	color: black;
 }
 
+.btnLogin {
+	background-color: var(--dark-3);
+	color: var(--light-0);
+	border: none;
+	padding: 0.7rem 1.4rem;
+	border-radius: 0.7rem;
+	font-weight: 600;
+	cursor: pointer;
+}
+
 /* Media Queries */
 @media (max-width: 900px) {
 	.bgScreenMenu {
