--- a/src/components/RecipeNavs.module.css
+++ b/src/components/RecipeNavs.module.css
@@ -4,15 +4,19 @@
 	width: 15%;
 	height: 100vh;
 }
-.userSection {
-	/* position: fixed; */
+.recipeNavsItems {
 	display: flex;
 	flex-direction: column;
-	/* row-gap: 1rem; */
+	justify-content: space-between;
+	align-items: center;
+	height: 100%;
+}
+.userSection {
+	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	padding: 2.4rem;
-	/* margin: 1.4rem 0; */
 }
 
 .userImg {
@@ -31,14 +35,10 @@
 	border: none;
 	background-color: inherit;
 	cursor: pointer;
-	/* background-color: var(--light-3); */
 	padding: 0.7rem;
 }
 .navOptions {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	gap: 1rem;
+	margin-top: auto;
 }
 
 .recipeNavList {
@@ -57,8 +57,25 @@
 .active {
 	transition: all 200ms ease-in;
 	background-color: var(--dark-3);
-	/* color: var(--light-3) !important; */
 	box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
+}
+
+.btnLogout {
+	margin-top: auto;
+	margin-bottom: 2rem;
+	border: none;
+	background-color: transparent;
+	text-transform: capitalize;
+	font-size: 1.5rem;
+	font-weight: 600;
+	cursor: pointer;
+}
+.login {
+	margin-top: auto;
+	margin-bottom: 2rem;
+	color: var(--dark-0) !important;
+	font-size: 1.5rem;
+	font-weight: 600;
 }
 
 .active a {
