refactored the search and filtering to a component, then added it to the pages that needed it

--- a/src/components/RecipeDetails.module.css
+++ b/src/components/RecipeDetails.module.css
@@ -101,6 +101,15 @@
 	margin-bottom: 0.5rem;
 	font-size: 2.4rem;
 }
+.submitReviews {
+	margin-bottom: 3.2rem;
+}
+.formReview {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	width: 25rem;
+}
 .winePair {
 	margin: 1.8rem 0;
 	width: 20rem;
