--- a/src/components/Meals.module.css
+++ b/src/components/Meals.module.css
@@ -33,7 +33,9 @@ a {
 .grid4 {
 	display: grid;
 	/* display: flex; */
-	grid-template-columns: repeat(4, 1fr);
+	/* grid-template-columns: repeat(4, 1fr); */
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+
 	align-items: center;
 	justify-content: space-between;
 }
