--- a/src/components/RecipeNavs.module.css
+++ b/src/components/RecipeNavs.module.css
@@ -45,7 +45,6 @@
 	margin-bottom: 1.2rem;
 	padding: 0.7rem 0.7rem;
 	border-radius: 0.6rem;
-	border: 1px solid var(--light-2);
 	cursor: pointer;
 
 	display: flex;
@@ -55,17 +54,18 @@
 }
 
 .recipeNavLists a {
-	color: var(--light-0);
+	color: var(--dark-1);
 }
 
 .active {
+	color: var(--light-0);
 	transition: all 200ms ease-in;
 	background-color: var(--dark-3);
 	box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
 }
 
 .btnLogout {
-	margin-top: auto;
+	margin-top: 1rem;
 	margin-bottom: 2rem;
 	border: none;
 	background-color: transparent;
@@ -73,15 +73,44 @@
 	font-size: 1.5rem;
 	font-weight: 600;
 	cursor: pointer;
+	color: var(--dark-1);
 }
 .login {
-	margin-top: auto;
+	margin-top: 1rem;
 	margin-bottom: 2rem;
-	color: var(--dark-0) !important;
+	padding: 0.6rem 1.2rem;
+	color: var(--dark-1) !important;
 	font-size: 1.5rem;
 	font-weight: 600;
 }
 
 .active a {
 	color: var(--light-0);
+}
+
+.menu {
+	margin-top: auto;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+.footerMenu,
+.footerMenu div ul {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	/* background-color: red; */
+}
+.footerMenu div h6 {
+	text-align: cneter;
+}
+@media (max-width: 900px) {
+	.recipeNavs {
+		display: none;
+		/* position: none;
+		height: 5rem;
+		width: 100% */
+	}
 }
