--- a/src/pages/Recipes.module.css
+++ b/src/pages/Recipes.module.css
@@ -11,9 +11,18 @@
 	padding-right: 1.4rem;
 }
 
+.favFooter {
+	/* z-index: 999; */
+	display: none;
+}
+
+/* MEDIA QUEERIES */
 @media (max-width: 900px) {
 	.recipes {
 		display: flex;
 		flex-direction: column;
+	}
+	.favFooter {
+		display: block;
 	}
 }
