--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,9 +1,13 @@
 .heroContent {
-	/* background-color: var(--light-1); */
-	background-image: url("../src/assets/bg1.jpg");
+	background-color: var(--light-1);
+	background-image: linear-gradient(
+			rgba(199, 199, 196, 0.8),
+			rgba(223, 215, 200, 0.2)
+		),
+		url("./src/assets/bg1.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
-	/* background-position: center; */
+	background-position: center;
 	width: 100%;
 	height: 80vh;
 }
@@ -13,4 +17,13 @@
 	align-items: center;
 	padding: 0.5rem 1.8rem;
 	color: var(--dark-0);
+}
+
+@media (max-width: 100px) {
+}
+
+@media (max-width: 500px) {
+	/* .heroContent {
+		background-size: contain;
+	} */
 }
