--- a/src/components/HeaderMain.module.css
+++ b/src/components/HeaderMain.module.css
@@ -5,16 +5,19 @@
 	flex-direction: column;
 	row-gap: 1rem;
 
-	padding: 5rem 35rem;
+	padding: 5rem 30rem;
 	margin: 6rem 0;
 }
 
 .heroText {
 	font-size: 4.2rem;
-	padding-left: 8rem;
-	font-weight: 600;
+	font-weight: 700;
 	text-align: center;
-	/* line-height: 0.9; */
+	line-height: 0.9;
+}
+
+.heroContent span {
+	text-align: center;
 }
 
 .btn {
@@ -24,4 +27,25 @@
 	padding: 1.2rem;
 	color: var(--light-0);
 	cursor: pointer;
+}
+@media (max-width: 69.4rem) {
+	.heroContent {
+		padding: 4rem 5rem;
+	}
+}
+@media (max-width: 500px) {
+	.heroContent {
+		padding: 2rem 2rem;
+	}
+	.heroText {
+		font-size: 4.2rem;
+		padding-left: 3rem;
+	}
+}
+@media (max-width: 28.75rem) {
+	.heroText {
+		/* margin-top: 7rem; */
+		font-size: 3.6rem;
+		padding-left: 0rem;
+	}
 }
