--- a/src/components/MobileMenus.module.css
+++ b/src/components/MobileMenus.module.css
@@ -5,11 +5,15 @@
 	padding: 0 1.4rem 0.7rem 1.4rem;
 	position: relative;
 }
+.mobileMenus ion-icon {
+	font-size: 3.2rem;
+}
+
 .mobileMenusNavs {
 	position: absolute;
 	top: 0;
 	right: 0;
-	width: 30%;
+	width: 100%;
 	height: 100vh;
 	background-color: var(--light-1);
 	z-index: 999;
@@ -31,7 +35,7 @@
 }
 .mobileMenusNavs ion-icon:first-child {
 	/* color: white; */
-	font-size: 2.4rem;
+	font-size: 2.8rem;
 	align-self: flex-start;
 }
 
@@ -52,6 +56,15 @@
 	border-radius: 2px;
 	padding: 0.5rem 1rem;
 	color: var(--light-0);
+}
+
+.menuLists {
+	display: flex;
+	flex-direction: column;
+	/* gap: 0.2rem; */
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 1.4rem;
 }
 
 /* MEDIA QUERIES */
